# dc-demo-shuwei

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  demo.ipynb  law.cfg  luigi.cfg  pyproject.toml
data_replay/: README.md
data_replay/get_data/: chanslist.txt  get_data.py  get_data.sub  get_data_subs.py  make_subs.sh
data_replay/make_lldata/: make_lldata.py  make_lldata.sub  make_lldata_subs.py  make_lldata_subs.sh
data_replay/replay/: replay.py  replay_H1.sh  replay_HLK.sh  replay_K1.sh  replay_L1.sh  start_replay.sh  stop_replay.sh
deepclean/: __init__.py  base.py  config.py
deepclean/couplings/: __init__.py  coupling.py  sub_60Hz.py
deepclean/tasks/: data.py  train.py
projects/clean/: apptainer.def  config.yaml  config_H1.yaml  config_K1.yaml  config_L1.yaml  config_L1_test.yaml  pyproject.toml  run_train.sh  run_train_H1_test.sh  run_train_K1.sh  run_train_L1_test.sh
projects/clean-2/: README.md  config.yaml  run_clean_K1.sh
projects/clean-2/clean/: __main__.py  clean.py
projects/clean/train/: callbacks.py  callbacks_modified.py  cli.py  data.py  metrics.py  model.py  plotting.py  testing_code.ipynb
projects/clean/train/architectures/: __init__.py  autoencoder.py
projects/data/: apptainer.def  config.yaml  environment.yaml  pyproject.toml
projects/data/data/: cli.py
projects/test/: conda-lock.yml
projects/train/: README.md  apptainer.def  config.yaml  config_K1.yaml  output_checking.ipynb  output_checking_strain_noise.ipynb  pyproject.toml  ray_test.py  run_train_K1.sh  testing.ipynb  testing.py
projects/train/files/: config_H1_test.yaml  config_K1_test.yaml  run_train_H1.sh  run_train_K1_test.sh  run_train_L1.sh
projects/train/train/: callbacks.py  cli.py  data-v1.py  data.py  metrics.py  model.py  plotting.py  testing_code.ipynb
projects/train/train/architectures/: architecture.py
projects/utils/: pyproject.toml
projects/utils/utils/: filt.py
projects/utils/utils/plotting/: __init__.py  spectral_density.py  utils.py
