[tool.poetry]
name = "data"
version = "0.0.1"
description = "Generate DeepClean datasets"
authors = ["Alec Gunny <alecg@mit.edu>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
